[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/screens/GraduationScreen.gd" id="1"]
[ext_resource type="Theme" path="res://themes/MobileTheme.tres" id="2"]

[node name="GraduationScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource("2")
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.05, 0.15, 1)

[node name="VBox" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -400.0
offset_right = 400.0
offset_bottom = 400.0
theme_override_constants/separation = 30

[node name="Title" type="Label" parent="VBox"]
layout_mode = 2
text = "ğŸ“ ì¡¸ì—…ì„ ì¶•í•˜í•©ë‹ˆë‹¤!"
theme_override_font_sizes/font_size = 56
horizontal_alignment = 1

[node name="PlayerName" type="Label" parent="VBox"]
layout_mode = 2
text = "ì„ ìˆ˜ ì´ë¦„"
theme_override_font_sizes/font_size = 42
horizontal_alignment = 1
theme_override_colors/font_color = Color(1, 0.8, 0.3, 1)

[node name="Message" type="Label" parent="VBox"]
layout_mode = 2
text = "3ë…„ê°„ì˜ ì•„ì¹´ë°ë¯¸ ìƒí™œì„ ì„±ê³µì ìœ¼ë¡œ ë§ˆì³¤ìŠµë‹ˆë‹¤!"
theme_override_font_sizes/font_size = 28
horizontal_alignment = 1
autowrap_mode = 2

[node name="Spacer1" type="Control" parent="VBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="StatsContainer" type="VBoxContainer" parent="VBox"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="FinalCA" type="Label" parent="VBox/StatsContainer"]
layout_mode = 2
text = "ìµœì¢… ëŠ¥ë ¥ì¹˜: 0 / 0"
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1
theme_override_colors/font_color = Color(0.3, 1, 0.3, 1)

[node name="MatchesPlayed" type="Label" parent="VBox/StatsContainer"]
layout_mode = 2
text = "ì´ ê²½ê¸°: 0íšŒ"
theme_override_font_sizes/font_size = 28
horizontal_alignment = 1

[node name="TrainingCount" type="Label" parent="VBox/StatsContainer"]
layout_mode = 2
text = "ì´ í›ˆë ¨: ì•½ 0íšŒ"
theme_override_font_sizes/font_size = 28
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="VBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="ReturnButton" type="Button" parent="VBox"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
text = "ë©”ì¸ ë©”ë‰´ë¡œ"
theme_override_font_sizes/font_size = 36
